<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".intro.LoginActivity">

    <TextView
        android:layout_width="302dp"
        android:layout_height="89dp"
        android:text="@string/login_textview_header"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.221" app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" app:fontFamily="@font/catamaran"
        android:background="#00E60B0B" android:textColor="@color/colorPrimary" android:textSize="24sp"
        android:textStyle="bold" android:gravity="center" android:id="@+id/login_textview_header"
        />
    <TextView
        android:text="@string/login_textview_noaccount"
        android:layout_width="202dp"
        android:layout_height="42dp"
        android:id="@+id/login_textview_noaccount" app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.497"
        app:fontFamily="@font/catamaran" android:gravity="center" android:textSize="14sp"
        android:textColor="@color/colorPrimary" android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/login_button_login" android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.0"/>

    <EditText
        android:id="@+id/login_plaintext_username"
        android:layout_width="256dp"
        android:layout_height="61dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="8dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/login_plaintext_username_hint"
        android:inputType="textPersonName"
        android:textAllCaps="false"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_textview_header"
        app:layout_constraintVertical_bias="0.0"
        tools:targetApi="o" />
    <EditText
        android:layout_width="256dp"
        android:layout_height="61dp"
        android:inputType="textPassword"
        android:ems="10"
        app:layout_constraintBottom_toBottomOf="parent" android:id="@+id/login_plaintext_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/login_plaintext_username"
        app:layout_constraintVertical_bias="0.011" android:hint="@string/login_plaintext_password_hint"
        android:autofillHints="" tools:targetApi="o"/>

    <Button
        android:id="@+id/login_button_login"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorPrimary"
        android:text="@string/login_button_login"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_plaintext_password"
        app:layout_constraintVertical_bias="0.066" />
    <ProgressBar
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/login_progressbar" android:layout_marginTop="8dp"
        app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
        app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintVertical_bias="0.464"/>

    <TextView
        android:id="@+id/login_textview_forgotpass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="Forgot password?"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/login_button_login"
        app:layout_constraintEnd_toEndOf="@+id/login_plaintext_password"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_plaintext_password"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>