<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:navGraph="@navigation/nav_graph"
    tools:context=".profile.ProfileFragment">

    <Button
        android:id="@+id/profile_button_registered_events"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="155dp"
        android:layout_height="48dp"
        android:layout_marginTop="48dp"
        android:background="@color/colorPrimary"
        android:text="Registered Events"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_textview_hours" />

    <TextView
        android:id="@+id/profile_textview_hours_p"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        android:text="@string/profile_textview_phone_p"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/profile_textview_hours"
        app:layout_constraintTop_toBottomOf="@+id/profile_textview_phone_p" />

    <TextView
        android:id="@+id/profile_textview_hours"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="48dp"
        android:text="Total Volunteer Hours:"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_textview_phone" />

    <ProgressBar
        android:id="@+id/profile_progressbar"
        style="?android:attr/progressBarStyle"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_textview_hours"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/profile_plaintext_editname"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginStart="25dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="New Display Name"
        android:inputType="textPersonName"
        android:textAllCaps="false"
        android:textSize="14sp"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="@+id/profile_textview_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/profile_textview_name"
        app:layout_constraintTop_toTopOf="@+id/profile_textview_name"
        tools:targetApi="o" />

    <TextView
        android:id="@+id/profile_textview_phone"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="48dp"
        android:text="Phone Number: "
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_textview_email" />

    <TextView
        android:id="@+id/profile_textview_phone_p"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        android:text="@string/profile_textview_phone_p"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/profile_textview_phone"
        app:layout_constraintTop_toBottomOf="@+id/profile_textview_email_p" />

    <TextView
        android:id="@+id/profile_textview_email_p"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        android:text="@string/profile_textview_email_p"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/profile_textview_email"
        app:layout_constraintTop_toBottomOf="@+id/profile_textview_name_p" />

    <TextView
        android:id="@+id/profile_textview_email"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="48dp"
        android:text="Email:"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_textview_name" />

    <TextView
        android:id="@+id/profile_textview_name"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="32dp"
        android:text="Name: "
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/profile_textview_name_p"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="48dp"
        android:text="@string/profile_textview_name_p"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="@+id/profile_textview_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/profile_textview_name"
        app:layout_constraintTop_toTopOf="@+id/profile_textview_name" />

</androidx.constraintlayout.widget.ConstraintLayout>